--- a/src/components/searchBar/SearchBar.scss
+++ b/src/components/searchBar/SearchBar.scss
@@ -1,10 +1,13 @@
 .searchbar-input {
-  all: unset;
+  // all: unset;
+  // outline: unset;
+  border: none;
   width: 100%;
   padding: 10px;
   border-bottom: 1px solid gray;
 }
 
 .searchbar-input:focus {
+  outline: none;
   border-bottom: 2px solid black;
 }
